--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "awesome": "^0.0.7",
     "axios": "^0.24.0",
     "boostrap": "^2.0.0",
     "core-js": "^3.6.5",
+    "font": "^0.0.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
